[Bug] white-space: nowrap is by default now in .atk-button

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -92,6 +92,7 @@ input {
         font-weight: bold;
         line-height: @bodyBaseline;
         padding: (0.5em * @baselineDestroyer) (1em * @baselineDestroyer);
+        white-space: nowrap;
         &:hover {
             .buttonHover;
         }
